add change file

--- a/shop-grid.html
+++ b/shop-grid.html
@@ -195,7 +195,7 @@
 
                         <li><a href="#">Comprar</a>
                             <ul class="sub-menu">
-                                <li><a href="shop-grid.html">Grade/a></li>
+                                <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                 <li><a href="shop-left-sidebar.html">Lateral esquerda </a></li>
                                 <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                 <li><a href="product-details.html">Detalhes</a></li>
@@ -301,7 +301,7 @@
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
-                                                                <a href="locations.html"><i class="flaticon-pin"></i>
+                                                                <i class="flaticon-pin"></i>
                                                                     Porto Algre, Rio Grande do Sul</a>
                                                             </li>
                                                         </ul>
@@ -342,7 +342,7 @@
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
-                                                                <a href=""><i class="flaticon-pin"></i>
+                                                                <i class="flaticon-pin"></i>
                                                                     Sombrio, Santa Catarina</a>
                                                             </li>
                                                         </ul>
@@ -383,8 +383,8 @@
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
-                                                                <a href=""><i class="flaticon-pin"></i>
-                                                                    Torres, Rio Grand do Sul</a>
+                                                                <i class="flaticon-pin"></i>
+                                                                    Torres, Rio Grand do Sul
                                                             </li>
                                                         </ul>
                                                     </div>
@@ -424,8 +424,8 @@
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
-                                                                <a href=""><i class="flaticon-pin"></i>
-                                                                    Torres, Rio Grande do Sul</a>
+                                                                <i class="flaticon-pin"></i>
+                                                                    Torres, Rio Grande do Sul
                                                             </li>
                                                         </ul>
                                                     </div>
@@ -465,8 +465,8 @@
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
-                                                                <a href=""><i class="flaticon-pin"></i>
-                                                                    Ararangua, Santa Catarina</a>
+                                                                <i class="flaticon-pin"></i>
+                                                                    Ararangua, Santa Catarina
                                                             </li>
                                                         </ul>
                                                     </div>
@@ -506,8 +506,8 @@
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
-                                                                <a href=""><i class="flaticon-pin"></i>
-                                                                    Ararangua, Santa Catarina</a>
+                                                                <i class="flaticon-pin"></i>
+                                                                    Ararangua, Santa Catarina
                                                             </li>
                                                         </ul>
                                                     </div>
@@ -557,8 +557,8 @@
                                                     <div class="product-img-location">
                                                         <ul>
                                                             <li>
-                                                                <a href=""><i class="flaticon-pin"></i>
-                                                                    Ararangua, Santa Catarina</a>
+                                                               <i class="flaticon-pin"></i>
+                                                                    Ararangua, Santa Catarina
                                                             </li>
                                                         </ul>
                                                     </div>
@@ -591,11 +591,11 @@
                                                                 <span>$349.900,00<label></label></span>
                                                             </div>
                                                         </div>
-                                                        <h2 class="product-title"><a href="product-details.html">Casa Bairro Feliz</a></h2>
+                                                        <h2 class="product-title"><a href="product-details.html">Casa Bairro Feliz</h2>
                                                         <div class="product-img-location">
                                                             <ul>
                                                                 <li>
-                                                                    <a href=""><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                                    <i class="flaticon-pin"></i> Torres, Rio Grande do Sul
                                                                 </li>
                                                             </ul>
                                                         </div>
@@ -632,7 +632,7 @@
                                                         <div class="product-img-location">
                                                             <ul>
                                                                 <li>
-                                                                    <a href=""><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                                    <i class="flaticon-pin"></i> Torres, Rio Grande do Sul
                                                                 </li>
                                                             </ul>
                                                         </div>
@@ -671,7 +671,7 @@
                                                         <div class="product-img-location">
                                                             <ul>
                                                                 <li>
-                                                                    <a href=""><i class="flaticon-pin"></i> Sombrio, Santa Catarina</a>
+                                                                    <i class="flaticon-pin"></i> Sombrio, Santa Catarina
                                                                 </li>
                                                             </ul>
                                                         </div>
@@ -708,7 +708,7 @@
                                                         <div class="product-img-location">
                                                             <ul>
                                                                 <li>
-                                                                    <a href=""><i class="flaticon-pin"></i> Tubarão, Santa Catarina</a>
+                                                                    <i class="flaticon-pin"></i> Tubarão, Santa Catarina
                                                                 </li>
                                                             </ul>
                                                         </div>
