--- a/shop-grid.html
+++ b/shop-grid.html
@@ -94,7 +94,7 @@
 
                                             <li><a href="#">Comprar</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="shop-grid.html">Grade</a></li>
+                                                    <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                                     <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                                     <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                                     <li><a href="product-details.html">Detalhes</a></li>
