add change file

--- a/shop-grid.html
+++ b/shop-grid.html
@@ -142,6 +142,7 @@
                                     <li>
                                         <a href="#"><i class="icon-user"></i></a>
                                         <ul>
+                                            <li><a href="login.html">Conecte-se</a></li>
                                             <li><a href="register.html">Registro</a></li>
                                             <li><a href="account.html">Minha conta</a></li>
                                         </ul>
