--- a/team.html
+++ b/team.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Imobiliaria Santos</title>
+    <title>Santos Imobiliária</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -90,7 +90,7 @@
 
                                         <li><a href="#">Comprar</a>
                                             <ul class="sub-menu">
-                                                <li><a href="shop-grid.html">Grade</a></li>
+                                                <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                                 <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                                 <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                                 <li><a href="product-details.html">Detalhes</a></li>
@@ -141,6 +141,7 @@
                                 <li>
                                     <a href="#"><i class="icon-user"></i></a>
                                     <ul>
+                                        <li><a href="login.html">Conecte-se</a></li>
                                         <li><a href="register.html">Registro</a></li>
                                         <li><a href="account.html">Minha conta</a></li>
                                     </ul>
@@ -190,7 +191,7 @@
 
                     <li><a href="#">Comprar</a>
                         <ul class="sub-menu">
-                            <li><a href="shop-grid.html">Grade</a></li>
+                            <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                             <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                             <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                             <li><a href="product-details.html">Detalhes</a></li>
