--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                                             <li><a href="#">Comprar</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="shop-grid.html">Grade</a></li>
+                                                    <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                                     <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                                     <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                                     <li><a href="product-details.html">Detalhes</a></li>
@@ -158,7 +158,7 @@
 
                         <li><a href="#">Comprar</a>
                             <ul class="sub-menu">
-                                <li><a href="shop-grid.html">Loja</a></li>
+                                <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                 <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                 <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                 <li><a href="product-details.html">Detalhes</a></li>
@@ -172,6 +172,7 @@
                                 <li><a href="service.html">Serviços</a></li>
                                 <li><a href="service-details.html">Detalhes do serviços</a></li>
                                 <li><a href="team.html">Equipe</a></li>
+                                <li><a href="login.html">Conecte-se</a></li>
                                 <li><a href="history.html">História</a></li>
                                 <li><a href="contact.html">Contato</a></li>
                             </ul>
@@ -495,8 +496,8 @@
                                 <a href="product-details.html"><img src="img/product-3/2.jpg" alt="#"></a>
                             </div>
                             <div class="search-by-place-info">
-                                <h6><a href="locations.html">Ararangua</a></h6>
-                                <h4><a href="product-details.html">Área do distrito</a></h4>
+                                <h6>Ararangua</h6>
+                                <h4>Área do distrito</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product-details.html">Ver propriedades <i
                                             class="flaticon-right-arrow"></i></a>
@@ -510,8 +511,8 @@
                                 <a href="product-details.html"><img src="img/product-3/3.jpg" alt="#"></a>
                             </div>
                             <div class="search-by-place-info">
-                                <h6><a href="locations.html">Torres</a></h6>
-                                <h4><a href="product-details.html">Zona do Vale Noe</a></h4>
+                                <h6>Torres</h6>
+                                <h4>Zona do Vale Noe</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product-details.html">Ver Propriedades <i
                                             class="flaticon-right-arrow"></i></a>
@@ -525,8 +526,8 @@
                                 <a href="product-details.html"><img src="img/product-3/2.jpg" alt="#"></a>
                             </div>
                             <div class="search-by-place-info">
-                                <h6><a href="locations.html">Sombrio</a></h6>
-                                <h4><a href="product-details.html">Área do distrito</a></h4>
+                                <h6>Sombrio</h6>
+                                <h4>Área do distrito</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product-details.html">Ver propiedade <i
                                             class="flaticon-right-arrow"></i></a>
