add change file

--- a/index.html
+++ b/index.html
@@ -481,8 +481,8 @@
                                 <a href="product-details.html"><img src="img/product-3/1.jpg" alt="#"></a>
                             </div>
                             <div class="search-by-place-info">
-                                <h6><a href="locations.html">São Francisco</a></h6>
-                                <h4><a href="product-details.html">Área do Distrito Missionário</a></h4>
+                                <h6>São Francisco</h6>
+                                <h4>Bairro jardim das avenidas></h4>
                                 <div class="search-by-place-btn">
                                     <a href="product-details.html">Ver propriedade <i
                                             class="flaticon-right-arrow"></i></a>
@@ -497,7 +497,7 @@
                             </div>
                             <div class="search-by-place-info">
                                 <h6>Ararangua</h6>
-                                <h4>Área do distrito</h4>
+                                <h4>Centro/h4>
                                 <div class="search-by-place-btn">
                                     <a href="product-details.html">Ver propriedades <i
                                             class="flaticon-right-arrow"></i></a>
@@ -512,7 +512,7 @@
                             </div>
                             <div class="search-by-place-info">
                                 <h6>Torres</h6>
-                                <h4>Zona do Vale Noe</h4>
+                                <h4>Zona do Vale</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product-details.html">Ver Propriedades <i
                                             class="flaticon-right-arrow"></i></a>
@@ -527,7 +527,7 @@
                             </div>
                             <div class="search-by-place-info">
                                 <h6>Sombrio</h6>
-                                <h4>Área do distrito</h4>
+                                <h4>Avenida getúlio Vargas</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product-details.html">Ver propiedade <i
                                             class="flaticon-right-arrow"></i></a>
