--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                             </div>
                             <div class="search-by-place-info">
                                 <h6>São Francisco</h6>
-                                <h4>Bairro jardim das avenidas></h4>
+                                <h4>Bairro jardim das avenidas</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product-details.html">Ver propriedade <i
                                             class="flaticon-right-arrow"></i></a>
@@ -497,7 +497,7 @@
                             </div>
                             <div class="search-by-place-info">
                                 <h6>Ararangua</h6>
-                                <h4>Centro/h4>
+                                <h4>Centro</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product-details.html">Ver propriedades <i
                                             class="flaticon-right-arrow"></i></a>
