add change file

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                             </div>
                             <div class="search-by-place-info">
                                 <h6>Ararangua</h6>
-                                <h4>Centro</h4>
+                                <h4>Bairro coloninha</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product-details.html">Ver propriedades <i
                                             class="flaticon-right-arrow"></i></a>
@@ -512,7 +512,7 @@
                             </div>
                             <div class="search-by-place-info">
                                 <h6>Torres</h6>
-                                <h4>Zona do Vale</h4>
+                                <h4>Bairro dos anjos</h4>
                                 <div class="search-by-place-btn">
                                     <a href="product-details.html">Ver Propriedades <i
                                             class="flaticon-right-arrow"></i></a>
