add change file

--- a/service-details.html
+++ b/service-details.html
@@ -101,7 +101,7 @@
                                         
                                         <li><a href="#">Páginas</a>
                                             <ul class="sub-menu">
-                                                <li><a href="about.html">sobre</a></li>
+                                                <li><a href="about.html">Sobre</a></li>
                                                 <li><a href="service.html">Serviços</a></li>
                                                 <li><a href="team.html">Equipe</a></li>
                                                 <li><a href="login.html">Conecte-se</a></li>
