--- a/shop-left-sidebar.html
+++ b/shop-left-sidebar.html
@@ -187,7 +187,7 @@
 
                     <li><a href="#">Comprar</a>
                         <ul class="sub-menu">
-                            <li><a href="shop-grid.html">Grade</a></li>
+                            <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                             <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                             <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                             <li><a href="product-details.html"></a>Detalhes</li>
@@ -198,10 +198,11 @@
 
                     <li><a href="#">Páginas</a>
                         <ul class="sub-menu">
-                            <li><a href="about.html">sobre</a></li>
+                            <li><a href="about.html">Sobre</a></li>
                             <li><a href="service.html">Serviços</a></li>
                             <li><a href="service-details.html">Detalhes do serciços</a></li>
                             <li><a href="team.html">Equipe</a></li>
+                            <li><a href="login.html">Conecte-se</a></li>
                             <li><a href="history.html">História</a></li>
                             <li><a href="contact.html">Contato</a></li>
                         </ul>
@@ -287,7 +288,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href=""><i class="flaticon-pin"></i> Ararangua, Santa Catarina</a>
+                                                            <i class="flaticon-pin"></i> Ararangua, Santa Catarina
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -323,7 +324,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href=""><i class="flaticon-pin"></i> Sombrio, Santa Catrina</a>
+                                                            <i class="flaticon-pin"></i> Sombrio, Santa Catrina
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -359,7 +360,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Sombrio, Santa Catarina</a>
+                                                            <i class="flaticon-pin"></i> Sombrio, Santa Catarina
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -395,7 +396,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href=""><i class="flaticon-pin"></i> Campinas, São paulo</a>
+                                                            <i class="flaticon-pin"></i> Campinas, São paulo
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -467,7 +468,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href=""><i class="flaticon-pin"></i> Ararangua, Santa Catarina</a>
+                                                            <i class="flaticon-pin"></i> Ararangua, Santa Catarina
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -513,7 +514,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href=""><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                            <i class="flaticon-pin"></i> Torres, Rio Grande do Sul
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -552,7 +553,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href=""><i class="flaticon-pin"></i> Arárangua , Santa Catarina</a>
+                                                            <i class="flaticon-pin"></i> Arárangua , Santa Catarina
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -588,7 +589,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href=""><i class="flaticon-pin"></i> Ararangua, Santa Catarina</a>
+                                                            <i class="flaticon-pin"></i> Ararangua, Santa Catarina
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -624,7 +625,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href=""><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                            <i class="flaticon-pin"></i> Torres, Rio Grande do Sul
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -660,7 +661,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href=""><i class="flaticon-pin"></i> Arárangua, santa Catarina</a>
+                                                            <i class="flaticon-pin"></i> Arárangua, santa Catarina
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -867,7 +868,7 @@
                                             <i class="icon-call"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
+                                            <p><a href="tel:+55 48 991740401">+55 48 991740106</a></p>
                                         </div>
                                     </li>
                                     <li>
