--- a/shop-left-sidebar.html
+++ b/shop-left-sidebar.html
@@ -90,7 +90,7 @@
                     
                                         <li><a href="#">Comprar</a>
                                             <ul class="sub-menu">
-                                                <li><a href="shop-grid.html">Grade</a></li>
+                                                <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                                 <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                                 <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                                 <li><a href="product-details.html">Detalhes</a></li>
@@ -104,6 +104,7 @@
                                                 <li><a href="about.html">sobre</a></li>
                                                 <li><a href="service.html">Serviços</a></li>
                                                 <li><a href="team.html">Equipe</a></li>
+                                                <li><a href="login.html">Conecte-se</a></li>
                                                 <li><a href="history.html">História</a></li>
                                                 <li><a href="contact.html">Contato</a></li>
                     
