add change file

--- a/service.html
+++ b/service.html
@@ -307,7 +307,7 @@
                             <span><i class="flaticon-mortgage"></i></span>
                         </div>
                         <div class="ltn__feature-info">
-                            <h3><a href="service-details.html">Serviço de hipoteca</a></h3>
+                            <h3><a href="contact.html">Serviço de hipoteca</a></h3>
                             <p>A hipoteca é o ato de entregar seu imóvel como garantia a uma instituição financeira para conseguir um empréstimo ou financiamento.</p>
                         </div>
                     </div>
@@ -318,7 +318,7 @@
                             <span><i class="flaticon-operator"></i></span>
                         </div>
                         <div class="ltn__feature-info">
-                            <h3><a href="service-details.html">Consultoria</a></h3>
+                            <h3><a href="contact.html">Consultoria</a></h3>
                             <p>Para quem busca seus serviços um atendimento completo, compreendendo seus anseios sobre o padrão da construção, localização, prioridades ...
                                 .</p>
                         </div>
@@ -330,7 +330,7 @@
                             <span><i class="flaticon-house-1"></i></span>
                         </div>
                         <div class="ltn__feature-info">
-                            <h3><a href="service-details.html">Compra de casa</a></h3>
+                            <h3><a href="contact.html">Compra de casa</a></h3>
                             <p>Imobiliária com assessoria completa em todo processo de compra e venda · Encontramos o imóvel ideal em qualquer lugar para você .</p>
                         </div>
                     </div>
@@ -341,7 +341,7 @@
                             <span><i class="flaticon-house-3"></i></span>
                         </div>
                         <div class="ltn__feature-info">
-                            <h3><a href="service-details.html"></a>Venda de casa</h3>
+                            <h3><a href="contact.html"></a>Venda de casa</h3>
                             <p>Imóvel ideal para você. Temos os melhores imóveis da região à sua disposição, sejam eles residenciais ou comerciais, barracões ou terrenos.</p>
                         </div>
                     </div>
@@ -352,7 +352,7 @@
                             <span><i class="flaticon-official-documents"></i></span>
                         </div>
                         <div class="ltn__feature-info">
-                            <h3><a href="service-details.html">Serviços de Garantia</a></h3>
+                            <h3><a href="contact.html">Serviços de Garantia</a></h3>
                             <p> E na modalidade do seguro fiança, a burocracia para ambos os lados é menor, porém a imobiliária deve arcar com os custos do serviço, normalmente ...</p>
                         </div>
                     </div>
