add change file

--- a/service.html
+++ b/service.html
@@ -467,7 +467,7 @@
                                             <i class="icon-placeholder"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p>Santa Catarina, São paulo, Rio Grande do Sul</p>
+                                            <p>Santa Catarina, São Paulo, Rio Grande do Sul</p>
                                         </div>
                                     </li>
                                     <li>
@@ -475,7 +475,7 @@
                                             <i class="icon-call"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p><a href="tel:+0123-456789">+55 48 991740106</a></p>
+                                            <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -504,7 +504,7 @@
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="about.html">Sobre</a></li>
-                                    <li><a href="service-details.html">Blog</a></li>
+                                    <li><a href="blog.html">Blog</a></li>
                                     <li><a href="product-details.html">Todos os produtos</a></li>
                                 </ul>
                             </div>
@@ -527,16 +527,16 @@
                             <h4 class="footer-title">Cliente</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="contact.html">Conecte-se</a></li>
+                                    <li><a href="login.html">Conecte-se</a></li>
                                     <li><a href="account.html">Minha conta</a></li>
-                                    <li><a href="service-details.html">Serviços</a</li>
+                                    <li><a href="contact.html"></a>Contate-nos</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-3 col-md-6 col-sm-12 col-12">
                         <div class="footer-widget footer-newsletter-widget">
-                            <h5 class="mt-30">Nós aceitamos</h5>
+                            <h5 class="mt-30">Aceitamos</h5>
                             <img src="img/icons/payment-3.png" alt="Payment Image">
                         </div>
                     </div>
