add change file

--- a/about.html
+++ b/about.html
@@ -284,7 +284,7 @@
                             <div class="section-title-area ltn__section-title-2--- mb-20">
                                 <h6 class="section-subtitle section-subtitle-2 ltn__secondary-color">Sobre nós<select
                                         name="" id=""></select></h6>
-                                <h1 class="section-title">É líder imobiliário
+                                <h1 class="section-title">É líder imobiliário no 
                                     Mercado de aluguel<span>.</span></h1>
                                 <p>Esta amplitude de cobertura global, combinada com serviços especializados</p>
                             </div>
@@ -324,7 +324,6 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-title-area ltn__section-title-2--- text-center">
-                            <h6 class="section-subtitle section-subtitle-2 ltn__secondary-color">Outros serviços</h6>
                             <h1 class="section-title">Nosso foco principal</h1>
                         </div>
                     </div>
@@ -364,7 +363,7 @@
                                 <img src="img/icons/icon-img/23.png" alt="#">
                             </div>
                             <div class="ltn__feature-info">
-                                <h3><a href="service-details.html">Venda uma casa</a></h3>
+                                <h3><a href="service-details.html">Comprar uma casa</a></h3>
                                 <p>Casas à venda disponíveis no site, podemos combinar com você uma casa que você vai
                                     querer chamar de lar.</p>
                                 <a class="ltn__service-btn" href="service-details.html">Encontre uma casa <i
@@ -450,7 +449,6 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-title-area ltn__section-title-2--- text-center">
-                            <h6 class="section-subtitle section-subtitle-2 ltn__secondary-color">Nosso depoimento</h6>
                             <h1 class="section-title">Feedback dos clientes</h1>
                         </div>
                     </div>
@@ -627,7 +625,7 @@
                                                 <i class="icon-call"></i>
                                             </div>
                                             <div class="footer-address-info">
-                                                <p><a href="tel:+55 48 991740401">+55 48 991740401</a></p>
+                                                <p><a href="tel:+55 48 991740401">+55 48 991740106</a></p>
                                             </div>
                                         </li>
                                         <li>
@@ -676,7 +674,7 @@
                         </div>
                         <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                             <div class="footer-widget footer-menu-widget clearfix">
-                                <h4 class="footer-title">Atendimento ao cliente</h4>
+                                <h4 class="footer-title">Cliente</h4>
                                 <div class="footer-menu">
                                     <ul>
                                         <li><a href="login.html">Conecte-se</a></li>
