add change file

--- a/about.html
+++ b/about.html
@@ -48,11 +48,6 @@
                                                 </ul>
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="header-top-btn">
-                                                <a href="add-listing.html">Adicionar Listagem</a>
-                                            </div>
-                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -73,10 +68,6 @@
                                     <div class="get-support-icon">
                                         <i class="icon-call"></i>
                                     </div>
-                                    <div class="get-support-info">
-                                        <h6>Obtenha suporte</h6>
-                                        <h4><a href="tel:+123456789">123-456-789-10</a></h4>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -95,7 +86,7 @@
 
                                             <li><a href="#">Comprar</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="shop-grid.html">Grade</a></li>
+                                                    <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                                     <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                                     <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                                     <li><a href="product-details.html">Detalhes</a></li>
@@ -143,6 +134,7 @@
                                     <li>
                                         <a href="#"><i class="icon-user"></i></a>
                                         <ul>
+                                            <li><a href="login.html">Conecte-se</a></li>
                                             <li><a href="register.html">Registro</a></li>
                                             <li><a href="account.html">Minha conta</a></li>
                                         </ul>
@@ -196,7 +188,7 @@
 
                         <li><a href="#">Comprar</a>
                             <ul class="sub-menu">
-                                <li><a href="shop-grid.html">Grade</a></li>
+                                <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                 <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                 <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                 <li><a href="product-details.html"></a>Detalhes</li>
@@ -380,7 +372,6 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-title-area ltn__section-title-2--- text-center">
-                            <h6 class="section-subtitle section-subtitle-2 ltn__secondary-color">Equipe</h6>
                             <h1 class="section-title">Agentes Imobiliários</h1>
                         </div>
                     </div>
@@ -514,7 +505,6 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-title-area ltn__section-title-2--- text-center">
-                            <h6 class="section-subtitle section-subtitle-2 ltn__secondary-color">Notícias e blogs</h6>
                             <h1 class="section-title">Feeds de notícias</h1>
                         </div>
                     </div>
