add change file

--- a/about.html
+++ b/about.html
@@ -25,9 +25,8 @@
                         <div class="col-md-7">
                             <div class="ltn__top-bar-menu">
                                 <ul>
-                                    <li><a href="mailto:info@webmail.com?Subject=Flower%20greetings%20to%20you"><i
-                                                class="icon-mail"></i> santos@gmail.com</a></li>
-                                    <li><a href=""><i class="icon-placeholder"></i> Rua Amaro José Pereira_Ararangua</a>
+                                    <li><i class="icon-mail"></i> santos@gmail.com</li>          
+                                    <li><i class="icon-placeholder"></i> Rua Amaro José Pereira_Ararangua
                                     </li>
                                 </ul>
                             </div>
@@ -383,7 +382,7 @@
                                 <img src="img/team/4.jpg" alt="Image">
                             </div>
                             <div class="team-info">
-                                <h4><a href="team-details.html">Rosalina Dias</a></h4>
+                                <h4>Rosalina Dias</h4>
                                 <h6 class="ltn__secondary-color">Corretor de imóveis</h6>
                                 <div class="ltn__social-media">
                                     <ul>
@@ -401,7 +400,7 @@
                                 <img src="img/team/3.jpg" alt="Image">
                             </div>
                             <div class="team-info">
-                                <h4><a href="team-details.html">Juliana Oliveira </a></h4>
+                                <h4>Juliana Oliveira</h4>
                                 <h6 class="ltn__secondary-color">Agentes de Venda</h6>
                                 <div class="ltn__social-media">
                                     <ul>
@@ -419,7 +418,7 @@
                                 <img src="img/team/5.jpg" alt="Image">
                             </div>
                             <div class="team-info">
-                                <h4><a href="team-details.html">Luis Cardoso </a></h4>
+                                <h4>Luis Cardoso</h4>
                                 <h6 class="ltn__secondary-color">Vendedor de imóveis</h6>
                                 <div class="ltn__social-media">
                                     <ul>
