--- a/product-details.html
+++ b/product-details.html
@@ -95,7 +95,7 @@
 
                                             <li><a href="#">Comprar</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="shop-grid.html">Grade</a></li>
+                                                    <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                                     <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                                     <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                                     <li><a href="product-details.html">Detalhes</a></li>
@@ -105,7 +105,7 @@
 
                                             <li><a href="#">Páginas</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="about.html">sobre</a></li>
+                                                    <li><a href="about.html">Sobre</a></li>
                                                     <li><a href="service.html">Serviços</a></li>
                                                     <li><a href="service-details.html">Detalhes</a></li>
                                                     <li><a href="team.html">Equipe</a></li>
@@ -197,7 +197,7 @@
 
                         <li><a href="#">Comprar</a>
                             <ul class="sub-menu">
-                                <li><a href="shop-grid.html">Grade</a></li>
+                                <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                 <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                 <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                 <li><a href="product-details.html">Detalhes</a></li>
@@ -208,7 +208,7 @@
 
                         <li><a href="#">Páginas</a>
                             <ul class="sub-menu">
-                                <li><a href="about.html">sobre</a></li>
+                                <li><a href="about.html">Sobre</a></li>
                                 <li><a href="service.html">Serviços</a></li>
                                 <li><a href="service-details.html">Detalhes do serviços</a></li>
                                 <li><a href="team.html">Equipe</a></li>
