add change file

--- a/product-details.html
+++ b/product-details.html
@@ -462,8 +462,8 @@
                                             <div class="product-img-location">
                                                 <ul>
                                                     <li>
-                                                        <a href="product-details.html"><i class="flaticon-pin"></i>
-                                                            Torres, Rio Grande do Sul</a>
+                                                        <i class="flaticon-pin"></i>
+                                                            Torres, Rio Grande do Sul
                                                     </li>
                                                 </ul>
                                             </div>
@@ -501,8 +501,8 @@
                                             <div class="product-img-location">
                                                 <ul>
                                                     <li>
-                                                        <a href="product-details.html"><i class="flaticon-pin"></i>
-                                                            Sombrio, Santa Catarina</a>
+                                                        <i class="flaticon-pin"></i>
+                                                            Sombrio, Santa Catarina
                                                     </li>
                                                 </ul>
                                             </div>
