--- a/product-details.html
+++ b/product-details.html
@@ -105,7 +105,7 @@
 
                                             <li><a href="#">Páginas</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="about.html">Sobre</a></li>
+                                                    <li><a href="about.html">sobre</a></li>
                                                     <li><a href="service.html">Serviços</a></li>
                                                     <li><a href="service-details.html">Detalhes</a></li>
                                                     <li><a href="team.html">Equipe</a></li>
