--- a/product-details.html
+++ b/product-details.html
@@ -25,10 +25,9 @@
                         <div class="col-md-7">
                             <div class="ltn__top-bar-menu">
                                 <ul>
-                                    <li><a href="mailto:info@webmail.com?Subject=Flower%20greetings%20to%20you"><i
-                                                class="icon-mail"></i> Santos@gmail.com</a></li>
-                                    <li><a href=""><i class="icon-placeholder"></i>Rua Amaro José
-                                            Pereira-Ararangua</a></li>
+                                    <li><i class="icon-mail"></i> Santos@gmail.com</li>           
+                                    <li><i class="icon-placeholder"></i>Rua Amaro José
+                                            Pereira-Ararangua</li>
                                 </ul>
                             </div>
                         </div>
@@ -46,11 +45,6 @@
                                                     <li><a href="#" title="Instagram"><i
                                                                 class="fab fa-instagram"></i></a></li>
                                                 </ul>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="header-top-btn">
-                                                <a href="add-listing.html">Adicionar Listagem</a>
                                             </div>
                                         </li>
                                     </ul>
