--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                                                                 alt="#"></a>
                                                     </div>
                                                     <div class="search-by-place-info">
-                                                        <h4><a href="product-details.html">casa bela vista</a></h4>
+                                                        <h4><a href="product-details.html">Casa bela vista</a></h4>
                                                         <label><span class="ltn__secondary-color">1,300m </span>/ 21
                                                             min.</label>
                                                         <div class="search-by-place-brief">
