--- a/index.html
+++ b/index.html
@@ -682,9 +682,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-title-area ltn__section-title-2--- text-center---">
-                            <h6 class="section-subtitle section-subtitle-2--- ltn__secondary-color--- white-color">
-                                Depoimento do cliente</h6>
-                            <h1 class="section-title white-color">Veja qual é o nosso cliente <br>
+                            <h1 class="section-title white-color">Veja o que nosso cliente <br>
                                 Diz sobre nós</h1>
                         </div>
                     </div>
