--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-title-area ltn__section-title-2--- text-center---">
-                            <h1 class="section-title white-color">Veja o que nosso cliente <br>
+                            <h1 class="section-title black">Veja o que nosso cliente <br>
                                 Diz sobre nós</h1>
                         </div>
                     </div>
