--- a/shop-right-sidebar.html
+++ b/shop-right-sidebar.html
@@ -25,8 +25,8 @@
                     <div class="col-md-7">
                         <div class="ltn__top-bar-menu">
                             <ul>
-                                <li><a href="mailto:info@webmail.com?Subject=Flower%20greetings%20to%20you"><i class="icon-mail"></i> santos@gmail.com</a></li>
-                                <li><a href=""><i class="icon-placeholder"></i> Rua Amaro José Pereira-Ararangua</a></li>
+                                <li><i class="icon-mail"></i> santos@gmail.com</li>
+                                <li><i class="icon-placeholder"></i> Rua Amaro José Pereira-Ararangua</li>
                             </ul>
                         </div>
                     </div>
@@ -42,11 +42,6 @@
                                                 <li><a href="#" title="Twitter"><i class="fab fa-twitter"></i></a></li>
                                                 <li><a href="#" title="Instagram"><i class="fab fa-instagram"></i></a></li>
                                             </ul>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="header-top-btn">
-                                            <a href="add-listing.html">Adicionar Listagem</a>
                                         </div>
                                     </li>
                                 </ul>
@@ -91,7 +86,7 @@
                     
                                         <li><a href="#">Comprar</a>
                                             <ul class="sub-menu">
-                                                <li><a href="shop-grid.html">Grade</a></li>
+                                                <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                                 <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                                 <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                                 <li><a href="product-details.html">Detalhes</a></li>
@@ -189,7 +184,7 @@
 
                     <li><a href="#">Comprar</a>
                         <ul class="sub-menu">
-                            <li><a href="shop-grid.html">Grade</a></li>
+                            <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                             <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                             <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                             <li><a href="product-details.html"></a>Detalhes</li>
@@ -290,7 +285,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Ararangua, Santa Catarina</a>
+                                                            <i class="flaticon-pin"></i> Ararangua, Santa Catarina
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -325,7 +320,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Porto Algre, Rio Grande do Sul</a>
+                                                            <i class="flaticon-pin"></i> Porto Algre, Rio Grande do Sul
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -360,7 +355,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Sombrio, Santa Catarina</a>
+                                                            <i class="flaticon-pin"></i> Sombrio, Santa Catarina
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -396,7 +391,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Torres, Rio Grand do Sul</a>
+                                                          <i class="flaticon-pin"></i> Torres, Rio Grand do Sul
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -432,7 +427,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                            <i class="flaticon-pin"></i> Torres, Rio Grande do Sul
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -468,7 +463,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Ararangua, Santa Catarina</a>
+                                                            <i class="flaticon-pin"></i> Ararangua, Santa Catarina
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -515,7 +510,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                          <i class="flaticon-pin"></i> Torres, Rio Grande do Sul
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -550,7 +545,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Ararangua, Santa Catarina</a>
+                                                            <i class="flaticon-pin"></i> Ararangua, Santa Catarina
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -588,7 +583,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Torres, Rio Grande do Sul</a>
+                                                          <i class="flaticon-pin"></i> Torres, Rio Grande do Sul
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -624,7 +619,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Sombrio, Santa Catarina</a>
+                                                            <i class="flaticon-pin"></i> Sombrio, Santa Catarina
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -660,7 +655,7 @@
                                                 <div class="product-img-location">
                                                     <ul>
                                                         <li>
-                                                            <a href="locations.html"><i class="flaticon-pin"></i> Tubarão, Santa Catarina</a>
+                                                            <i class="flaticon-pin"></i> Tubarão, Santa Catarina
                                                         </li>
                                                     </ul>
                                                 </div>
