--- a/shop-left-sidebar.html
+++ b/shop-left-sidebar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Imobiliaria Santos</title>
+    <title>Santos Imobiliária</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,8 +25,8 @@
                     <div class="col-md-7">
                         <div class="ltn__top-bar-menu">
                             <ul>
-                                <li><a href="mailto:info@webmail.com?Subject=Flower%20greetings%20to%20you"><i class="icon-mail"></i> santos@gmail.com</a></li>
-                                <li><a href=""><i class="icon-placeholder"></i> Rua Amaro José Pereira-Ararangua</a></li>
+                                <li><i class="icon-mail"></i> santos@gmail.com</li>
+                                <li><i class="icon-placeholder"></i> Rua Amaro José Pereira-Ararangua</li>
                             </ul>
                         </div>
                     </div>
@@ -41,11 +41,6 @@
                                                 <li><a href="#" title="Twitter"><i class="fab fa-twitter"></i></a></li>
                                                 <li><a href="#" title="Instagram"><i class="fab fa-instagram"></i></a></li>
                                             </ul>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="header-top-btn">
-                                            <a href="add-listing.html">Adicionar Listagem</a>
                                         </div>
                                     </li>
                                 </ul>
