--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Imobiliaria Santos</title>
+    <title>Santos Imobiliária</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,10 +25,9 @@
                         <div class="col-md-7">
                             <div class="ltn__top-bar-menu">
                                 <ul>
-                                    <li><a href="mailto:info@webmail.com?Subject=Flower%20greetings%20to%20you"><i
-                                                class="icon-mail"></i> santos@gmail.com</a></li>
-                                    <li><a href=""><i class="icon-placeholder"></i> Rua Amaro José
-                                            Pereira</a></li>
+                                    <li><i   class="icon-mail"></i> santos@gmail.com</li>       
+                                    <li><i class="icon-placeholder"></i> Rua Amaro José
+                                            Pereira</li>
                                 </ul>
                             </div>
                         </div>
@@ -46,11 +45,6 @@
                                                     <li><a href="#" title="Instagram"><i
                                                                 class="fab fa-instagram"></i></a></li>
                                                 </ul>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="header-top-btn">
-                                                <a href="add-listing.html">Adicionar Listagem</a>
                                             </div>
                                         </li>
                                     </ul>
@@ -95,7 +89,7 @@
 
                                             <li><a href="#">Comprar</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="shop-grid.html">Grade</a></li>
+                                                    <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                                     <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                                     <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                                     <li><a href="product-details.html">Detalhes</a></li>
@@ -196,7 +190,7 @@
 
                         <li><a href="#">Comprar</a>
                             <ul class="sub-menu">
-                                <li><a href="shop-grid.html">Grade</a></li>
+                                <li><a href="shop-grid.html">Encontrar imóvel</a></li>
                                 <li><a href="shop-left-sidebar.html">Lateral esquerda</a></li>
                                 <li><a href="shop-right-sidebar.html">Lateral direita</a></li>
                                 <li><a href="product-details.html"></a>Detalhes</li>
