add change file

--- a/login.html
+++ b/login.html
@@ -246,7 +246,7 @@
                                 <ul>
                                     <li><a href="index.html"><span class="ltn__secondary-color"><i
                                                     class="fas fa-home"></i></span> Home</a></li>
-                                    <li>Conecte-se</li>
+                                    <li>Entrar</li>
                                 </ul>
                             </div>
                         </div>
