add file change

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                                 <h6>São Francisco</h6>
                                 <h4>Bairro jardim das avenidas</h4>
                                 <div class="search-by-place-btn">
-                                    <a href="product-details.html">Ver propriedade <i
+                                    <a href="product1-detaisl.html">Ver propriedade <i
                                             class="flaticon-right-arrow"></i></a>
                                 </div>
                             </div>
