create product2-details.html change index.html and change product-details.html

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     <div class="col-lg-4">
                         <div class="ltn__search-by-place-item">
                             <div class="search-by-place-img">
-                                <a href="product-details.html"><img src="img/product-3/1.jpg" alt="#"></a>
+                                <a href="product1-detaisl.html"><img src="img/product-3/1.jpg" alt="#"></a>
                             </div>
                             <div class="search-by-place-info">
                                 <h6>São Francisco</h6>
@@ -494,13 +494,13 @@
                     <div class="col-lg-4">
                         <div class="ltn__search-by-place-item">
                             <div class="search-by-place-img">
-                                <a href="product-details.html"><img src="img/product-3/2.jpg" alt="#"></a>
+                                <a href="product2-details.html"><img src="img/product-3/2.jpg" alt="#"></a>
                             </div>
                             <div class="search-by-place-info">
                                 <h6>Ararangua</h6>
                                 <h4>Bairro coloninha</h4>
                                 <div class="search-by-place-btn">
-                                    <a href="product-details.html">Ver propriedades <i
+                                    <a href="product2-details.html">Ver propriedades <i
                                             class="flaticon-right-arrow"></i></a>
                                 </div>
                             </div>
