create product3-details product4-details and change index.html img

--- a/index.html
+++ b/index.html
@@ -524,13 +524,13 @@
                     <div class="col-lg-4">
                         <div class="ltn__search-by-place-item">
                             <div class="search-by-place-img">
-                                <a href="product-details.html"><img src="img/product-3/2.jpg" alt="#"></a>
+                                <a href="product3-details.html"><img src="img/product-3/5.jpg" alt="#"></a>
                             </div>
                             <div class="search-by-place-info">
                                 <h6>Sombrio</h6>
                                 <h4>Avenida getúlio Vargas</h4>
                                 <div class="search-by-place-btn">
-                                    <a href="product-details.html">Ver propiedade <i
+                                    <a href="product3-details.html">Ver propiedade <i
                                             class="flaticon-right-arrow"></i></a>
                                 </div>
                             </div>
@@ -622,7 +622,7 @@
                                                                 alt="#"></a>
                                                     </div>
                                                     <div class="search-by-place-info">
-                                                        <h4><a href="product-details.html">Casa luxuosa linda</a></h4>
+                                                        <h4><a href="product2-details.html">Casa luxuosa linda</a></h4>
                                                         <label><span class="ltn__secondary-color">1,500m </span>/ 21
                                                             min</label>
                                                         <div class="search-by-place-brief">
@@ -630,7 +630,7 @@
                                                                 localização .</p>
                                                         </div>
                                                         <div class="search-by-place-btn">
-                                                            <a href="product-details.html">Ver propiedade <i
+                                                            <a href="product2-details.html">Ver propiedade <i
                                                                     class="flaticon-right-arrow"></i></a>
                                                         </div>
                                                     </div>
@@ -650,18 +650,16 @@
                                             <div class="col-lg-4">
                                                 <div class="ltn__search-by-place-item neighbour-apartments-item">
                                                     <div class="search-by-place-img">
-                                                        <a href="product-details.html"><img src="img/product-3/11.jpg"
+                                                        <a href="product-details.html"><img src="img/product-3/11.png"
                                                                 alt="#"></a>
                                                     </div>
                                                     <div class="search-by-place-info">
-                                                        <h4><a href="product-details.html">Parque Infantil</a></h4>
-                                                        <label><span class="ltn__secondary-color">1,500m </span>/ 21
-                                                            min. walk</label>
+                                                        <h4><a href="product4-details.html">Apartamento de luxo</a></h4>
                                                         <div class="search-by-place-brief">
-                                                            <p>Lugar aconchegante para as criaças se divertirem.</p>
+                                                            <p>Com conforto e elegância</p>
                                                         </div>
                                                         <div class="search-by-place-btn">
-                                                            <a href="product-details.html">Ver propiedade <i
+                                                            <a href="product4-details.html">Ver detalhes <i
                                                                     class="flaticon-right-arrow"></i></a>
                                                         </div>
                                                     </div>
